Fix button border on dark mode

--- a/docs/src/components/Demo/Demo.css
+++ b/docs/src/components/Demo/Demo.css
@@ -353,7 +353,6 @@
       &::before {
         background: linear-gradient(to bottom, var(--gray-c2), var(--gray-c1));
         box-shadow:
-          inset 0 0 0 1px hsl(0deg 0% 100% / 8%),
           0 1px 1px hsl(0deg 0% 0% / 16%),
           0 1px 2px hsl(0deg 0% 0% / 16%),
           0 2px 4px -2px hsl(0deg 0% 0% / 24%);
